force-app/main/default/objects/copado__Automation_Event__c/fields/copado__Action_Result__c.field-meta.xml
<CustomField>
    <fullName>copado__Action_Result__c</fullName>
    <label>Action Result</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>