force-app/main/default/objects/copado__Automation_Event__c/fields/copado__Action_Status__c.field-meta.xml
<CustomField>
    <fullName>copado__Action_Status__c</fullName>
    <label>Action Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>