force-app/main/default/objects/copado__Automation_Event__c/fields/copado__Log__c.field-meta.xml
<CustomField>
    <fullName>copado__Log__c</fullName>
    <label>Automation Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>