force-app/main/default/objects/copado__Automation_Event__c/fields/copado__Pipeline_Id__c.field-meta.xml
<CustomField>
    <fullName>copado__Pipeline_Id__c</fullName>
    <label>Pipeline Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>