force-app/main/default/objects/copado__Automation_Event__c/fields/copado__Stage_Id__c.field-meta.xml
<CustomField>
    <fullName>copado__Stage_Id__c</fullName>
    <label>Stage Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>