force-app/main/default/objects/copado__Automation_Event__c/fields/copado__Target_Action_Job_Execution_Ids__c.field-meta.xml
<CustomField>
    <fullName>copado__Target_Action_Job_Execution_Ids__c</fullName>
    <label>Target Action Job Execution Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>