force-app/main/default/objects/copado__Automation_Event__c/fields/copado__Target_Action_Number__c.field-meta.xml
<CustomField>
    <fullName>copado__Target_Action_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Target Actions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>